# market-data-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: main.py
config/: exceptions.py  logging.py
data/raw/: AAPL_5d_2026-01-19.csv
ingestion/: event_fetcher.py  fetcher.py  storage.py
schemas/: responses.py
storage/: filesystem.py  naming.py
